--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -151,10 +151,12 @@ div.news {
 }
 
 div.news li {
-     text-align: left;
-     list-style-type: square;
-     margin: 2px 20px 0px 30px;
-     padding: 10px 20px 1px 0px;
+     text-align: justify;
+     font-weight: bold;
+     list-style-image: url(images/info_dark.png);
+     margin: 0 10px 0 30px;
+     padding: 5px;
+     vertical-align: middle;
 }
 
 div.confignav {
@@ -201,6 +203,7 @@ div.messages li {
      margin: 0 0 0 30px !important;
      padding: 5px;
      border: 0px !important;
+     text-align: justify !important;
 }
 
 table {
@@ -382,6 +385,7 @@ button {
      font-weight: bold;
      margin: 2px 3px;
      text-align: center;
+     min-width: 76px;
 }
 
 button:hover{
@@ -390,6 +394,11 @@ button:hover{
      color: #ff6600;
 }
 
+button:active {
+     border: 1px inset #f60;
+     background-color: #f60;
+     color: #fff;
+}
 .underline {
      border-bottom: 1px solid #eeeeff;
      padding: 5px 0px 5px 0px;
@@ -440,8 +449,10 @@ input:hover {
      border: 1px solid #f60;
 }
 
-input:btn {
-     background-color: #f00 !important;
+input:active {
+     background-color: #002;
+     color: #fff;
+     border: 1px solid #f60;
 }
 
 select {
