--- a/installer/resources/themes/console/light/default.css
+++ b/installer/resources/themes/console/light/default.css
@@ -132,7 +132,7 @@ hr {
 .freetext {
      width: 150px;
      height: 22px;
-     border: 1px solid #9999ff;
+     border: 1px solid #003;
      padding: 2px;
      margin: 4px 0 2px 4px;
 }
@@ -143,7 +143,7 @@ hr {
      overflow: hidden;
      height: 22px;
      width: 60px;
-     font-weight: normal;
+     font-weight: bold;
      background-color: #bbbbff;
      color: black;
      border: 1px outset #ddddc0;
