--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -149,13 +149,13 @@ div.news li {
      text-align: justify;
      font-weight: bold;
      list-style-image: url(images/info.png);
-     margin: 0 10px 0 30px;
-     padding: 5px;
-     vertical-align: middle;
+     margin: 0 10px 0 25px;
+     padding: 5px 0;
+     vertical-align: bottom;
 }
 
 div.confignav {
-     padding: 10px;
+     padding: 0 15px;
      margin: 0 0px 25px 0;
      background-color: #ddddff;
      -moz-border-radius: 4px;
@@ -304,11 +304,8 @@ h1 {
      font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana,  Tahoma, Helvetica, sans-serif;
      text-align: left;
      color: #000022;
-     padding: 10px;
-     margin-bottom: 25px;
-     margin-top: 0px;
-     margin-left: 245px;
-     margin-right: 15px;
+     padding: 10px 15px;
+     margin: 0 15px 25px 245px;
      font-size: 16pt;
      font-weight: bold;
      font-style: normal;
@@ -322,6 +319,7 @@ h1 {
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
      background-image: url('images/lightbluetile.png');
+     line-height: 120%;
 }
 
 h2{
@@ -413,12 +411,14 @@ input {
      background-color: #eef;
      color: #003;
      margin: 5px 10px 5px 10px;
+     padding: 4px 2px; 
      font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana,  Tahoma, Helvetica, sans-serif;
      font-weight: bold;
      border: 1px solid #001;
-     padding: 0px 2px 1px 2px;
+     padding: 4px;
      text-decoration: none;
      min-width: 110px;
+     font-size: 8pt;
 }
 
 input:hover {
@@ -436,6 +436,7 @@ submit {
      background-color: #f00;
      color: #eef;
      margin: 10px 2px 10px 0;
+     padding: 2px; 
      font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana,  Tahoma, Helvetica, sans-serif;
      font-weight: bold;
      border: 1px solid #001;
@@ -443,13 +444,19 @@ submit {
      text-decoration: none;
 }
 
+input checkbox {
+     border: 0 !important;
+}
+
 select {
      background-color: #eef;
      color: #003;
      margin: 5px 10px 5px 10px;
+     padding: 4px;
      font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana,  Tahoma, Helvetica, sans-serif;
      border: 1px solid #001;
      min-width: 110px;
+     font-size: 8pt;
 }
 
 textarea {
@@ -462,6 +469,7 @@ textarea {
      -webkit-border-radius: 4px;
      font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
      font-size: 8pt;
+     min-height: 128px;
 }
 
 form {}
