Minor tweaks to make Opera experience more enjoyabale.
Monotone-Parent: 409cbe7922015e3dcce7213dec1ba143e07b2e06
Monotone-Revision: 3bc76adeb90f8a97082c49abd12b7f511445767d

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-13T19:52:04
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -378,7 +378,7 @@ h3 {
   
 button {
      border: 1px outset #ddddc0;
-     padding: 0px 3px 1px 3px;
+     padding: 1px 3px;
      background-color: #bbf;
      text-decoration: none;
      border-radius: 4px;
