The taming of the textarea. Part 1.
Monotone-Parent: 3bc76adeb90f8a97082c49abd12b7f511445767d
Monotone-Revision: 12cc77e1d7d2318fa071cb9fa3741d9f64abf475

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-13T20:30:16
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -477,13 +477,14 @@ textarea {
      background-color: #001;
      color: #eef;
      padding: 5px;
-     margin: 5px -10px;
+     margin: 0 0 5px 0;
      border-radius: 4px;
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
      font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
      font-size: 9pt;
      min-height: 100px;
+     border: 1px solid #99f;
 }
 
 form {}
