--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -432,6 +432,7 @@ input:active {
      color: #f60;
      border: 1px solid #f60;
 }
+
 submit {
      background-color: #f00;
      color: #eef;
@@ -461,7 +462,7 @@ select {
 
 textarea {
      padding: 5px;
-     margin: 5px -20px;
+     margin: 0 10px 5px 10px;
      background-color: #eef;
      color: #003;
      border-radius: 4px;
@@ -470,6 +471,7 @@ textarea {
      font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
      font-size: 8pt;
      min-height: 128px;
+     border: 1px solid #001;     
 }
 
 form {}
