Bash the textarea sizes about a bit and tidy configupdate.jsp table.
Monotone-Parent: 4afb4fcf6ac3b23893506f497d506c6e82eff0e3
Monotone-Revision: b1801c544c231626a9a012f859dc84daa2c8a206

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-13T21:48:44
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -130,7 +130,6 @@ div.main {
 }
 
 div.main textarea {
-     width: 100% !important;
      background-color: #002;
      color: #fff;
      font-size: 8pt;
@@ -477,13 +476,15 @@ textarea {
      background-color: #001;
      color: #eef;
      padding: 5px;
-     margin: 0 0 5px 0;
+     margin: 0 5px 5px 0px;
      border-radius: 4px;
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
      font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
      font-size: 9pt;
      min-height: 100px;
+     min-width: 100%;
+     text-align: left;
      border: 1px solid #99f;
 }
 
