Mostly layout updates to the readme files.
Monotone-Parent: 6d4115c18543fe71ebe66c20aa4c515d2ea96a5d
Monotone-Revision: 77a06a05de5fbb4a4f4bbdbc6e59fd83db244644

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-14T00:40:44
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -251,15 +251,19 @@ tt {
 div.main li {
      text-align: left;
      list-style-type: square;
-     margin: 4px 0px 4px 30px;
+     margin: 2px 0px 2px 30px;
      padding: 1px 20px 1px 0px;
      line-height: 150%;
+}
+
+.tidylist {
+     text-align: justify !important;
 }
 
 div.main li:nth-child ( even ){
      text-align: left;
      list-style-type: square;
-     margin: 4px 0px 4px 30px;
+     margin: 2px 0px 2px 30px;
      padding: 1px 20px 1px 0px;
      border-right: 4px solid #339;
 }
@@ -267,13 +271,14 @@ div.main li:nth-child ( even ){
 ol {
      white-space: pre-wrap;
      display: inline;
-     margin: 2px 0 0 0;
-     padding: 10px 0 0 20px;
+     margin: 1px 0 0 0;
+     padding: 1px 0 0 20px;
 }
 
 ul {
      display: inline;
-     margin: 5px 0 0 0;
+     margin: 0;
+     padding: 0;
 }
 
 code {
