--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -251,11 +251,16 @@ tt {
      padding: 1px 5px;
 }
 
-li {
+div.main li {
      text-align: left;
      list-style-type: square;
      margin: 2px 20px 0px 30px;
      padding: 1px 20px 1px 0px;
+     line-height: 150%;
+}
+
+.tidylist {
+     text-align: justify !important;
 }
 
 ol {
@@ -267,7 +272,8 @@ ol {
 
 ul {
      display: inline;
-     margin: 5px 0 0 0;
+     margin: 0;
+     padding: 0;
 }
 
 code {
