--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -1,12 +1,10 @@
 body {
-     font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana,  Tahoma, Helvetica, sans-serif;
      margin: 25px 10px 0 5px;
      padding: 0em;
      text-align: center;
-     background-color: #fff;
-     color: black;
-     font-size: 9pt;
-     line-height: 130%;
+     background: #fff;
+     color: #000;
+     font: 9pt/130% "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif;
 }
 
 .hide {
@@ -21,8 +19,7 @@ pre {
      width: 98%;
      overflow-x: scroll;
      text-align: left;
-     font-size: 8pt;
-     font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
+     font: 8pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
      color: #333;
 }
 
@@ -40,7 +37,7 @@ div.toolbar {
      margin: 0;
      padding: 10px;
      font-weight: bold;
-     background-color: #eeeeff;
+     background: #eef;
      border: 1px solid #002;
      display: none !important;
 }
@@ -49,7 +46,7 @@ div.toolbar a:link {
      border: 1px outset #ddddc0;
      padding: 0px 5px 1px 5px;
      line-height: 250%;
-     background-color: #bbf;
+     background: #bbf;
      text-decoration: none;
      border-radius: 4px;
      -moz-border-radius: 4px;
@@ -59,14 +56,14 @@ div.toolbar a:link {
 
 div.toolbar a:visited {
      line-height: 250%;
-     background-color: #ddf;
+     background: #ddf;
 }
 
 div.toolbar a:hover{
      border: 1px solid #eeeeff;
      line-height: 250%;
-     background-color: #003;
-     color: #ff6600;
+     background: #003;
+     color: #f60;
 }
 
 a:active{
@@ -90,21 +87,20 @@ div.routersummary {
      padding: 10px;
      text-align: center;
      border: 1px solid #000033;
-     background-color: #ddddff;
-     color: black;
+     background: #ddddff url('images/lightbluetile.png');
+     color: #000;
      font-size: 8pt;
      clear: left;/* fixes a bug in Opera */
      -moz-border-radius: 4px;
-     -webkit-border-radius: 4px;     
+     -webkit-border-radius: 4px;
      float: left;
      -moz-box-shadow: inset 0px 0px 16px 1px #eef;
-     background-image: url('images/lightbluetile.png');
 }
 
 div.warning {
      margin: 0em 1em 1em 224px;
      padding: .5em 1em;
-     background-color: #ffefef;
+     background: #ffefef;
      border: medium solid #ffafaf;
      text-align: left;
      color: inherit;
@@ -113,33 +109,32 @@ div.warning {
 div.main {
      margin: 0px 0px 20px 220px;
      padding: 0 15px 15px 25px;
-     background-color: #fff;
+     background: #fff;
      text-align: left;
-     color: #000011;
+     color: #001;
      width: auto;
 /*  overflow-x: scroll; */
 }
 
-div.main hr {
+div.main hr, hr {
      color: #003;
-     background-color: #003;
+     background: #003;
      height: 1px;
      border: 0px solid #003;
      margin: 10px 0;
 }
 
 div.main textarea {
-     background-color: #eef;
+     background: #eef;
      color: #001;
-     font-size: 8pt;
-     font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
+     font: 8pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
 }
 
 div.news {
      margin: 0px 15px 20px 245px;
      padding: 20px 30px 20px 30px;
      border: 1px solid #003;
-     background-color: #ffeeaa;
+     background: #fea;
      color: #001;
      border-radius: 4px;
      -moz-border-radius: 4px;
@@ -151,7 +146,7 @@ div.news {
 div.news li {
      text-align: justify;
      font-weight: bold;
-     list-style-image: url(images/info.png);
+     list-style: url(images/info.png);
      margin: 0 10px 0 25px !important;
      padding: 5px 0;
      vertical-align: bottom;
@@ -160,17 +155,16 @@ div.news li {
 div.confignav {
      padding: 0 15px;
      margin: 0 0px 25px 0;
-     background-color: #ddddff;
+     background: #ddddff url('images/tabletile.png');
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
      border: 1px solid #000022;
-     background-image: url('images/tabletile.png');
 }
 
 div.configure {
      padding: 1em;
      margin: 10px 0px 25px 0;
-     background-color: #ddf;
+     background: #ddf;
      -moz-border-radius: 4px;
      border: 1px solid #000022;
 }
@@ -178,8 +172,7 @@ div.configure {
 div.messages {
      padding: 0 10px 0 15px;
      margin: 10px 0 20px 0;
-     background-color: #ddf;
-     background: url(images/tabletile_alt.png);
+     background: #ddf;
      -moz-border-radius: 4px;
      border: 1px solid #000033;
      text-size: 9pt;
@@ -196,9 +189,7 @@ div.messages span.notice {
 div.messages li {
      text-align: justify;
      font-weight: bold;
-     list-style-image: url(images/warning.png);
-/*     margin: 0 10px 0 20px;
-     padding: 5px;*/
+     list-style: url(images/warning.png);
 }
 
 table {
@@ -208,16 +199,14 @@ table {
      margin: 5px 0px 5px 0px;
      cell-padding: 1px;
      font-size: 7pt;
-     background-color: #ddf;
+     background: #ddf;
 }
 
 th {
      padding: 4px;
-     color: black;
-     background-color: #b4c8ff;
+     color: #000;
+     background: #b4c8ff url('images/tabletitlelight.png') repeat-x;
      text-align: center;
-     background-image: url('images/tabletitlelight.png');
-     background-repeat: repeat-x;
      font-size: 8pt;
 }
 
@@ -226,35 +215,29 @@ tr {
 }
 
 tr:nth-child ( even ) {
-     background-image: url('images/tabletile.png');
-     background-color: #99f;
+     background: #99f url('images/tabletile.png');
 }
 
 tr:nth-child ( odd ) {
-     background-image: url('images/tabletile_alt.png');
-     background-color: #bbf;
+     background: #bbf url('images/tabletile_alt.png');
 }
 
 td {
      padding: 5px;
-     color: black;
-/*background-color: #ffc;*/
+     color: #000;
      text-align: left;
 }
 
 tt {
-     font-size: 8pt;
-     font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
-     font-weight: bold;
-     color: green;
-/*background: black;*/
+     font: bold 8pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
+     color: #008000;
      padding: 1px 5px;
 }
 
 div.main li {
      text-align: left;
-     list-style-type: square;
-     margin: 2px 5px 0px 5px;
+     list-style: square;
+     margin: 2px 5px 0px 20px;
      padding: 1px 20px 1px 10px;
      line-height: 150%;
 }
@@ -266,22 +249,21 @@ div.main li {
 ol {
 /* 
      white-space: pre-wrap;
-* 
+*/
      display: inline;
      margin: 1px 0 0 0;
      padding: 1px 0 0 20px;
 }
 
 ul {
-/*     display: inline; */
+     display: inline;
      margin: 5px 0;
      padding: 0;
 }
 
 code {
      text-align: left;
-     font-size: 8pt;
-     font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
+     font: 8pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
 }
 
 a:link{
@@ -293,15 +275,11 @@ a:visited{
 }
 
 a:hover{
-     color: #ff6600;
-}
-
-a:active{
-     color: #900;
+     color: #f60;
 }
 
 .links {
-     list-style-image: url(images/link.png);
+     list-style: url(images/link.png);
      margin: 10px 5px 0 0px;
      padding: 10px 20px 10px 30px;
 }
@@ -312,34 +290,28 @@ p {
 }
 
 h1 {
-     font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana,  Tahoma, Helvetica, sans-serif;
      text-align: left;
-     color: #000022;
+     color: #002;
      padding: 10px 15px;
      margin: 0 15px 25px 245px;
-     font-size: 16pt;
-     font-weight: bold;
-     font-style: normal;
+     font: normal bold 16pt/120% "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif;
      letter-spacing: 0.15em;
      text-transform: uppercase;
      text-shadow: 0px 0px 1px rgba(0, 0, 148, 0.9);
      -moz-box-shadow: inset 0px 0px 16px 1px #eef;
      white-space: normal;
-     background-color: #ddddff;
+     background: #ddddff url('images/lightbluetile.png');
      border: 1px solid #002;
      border-radius: 4px;
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
-     background-image: url('images/lightbluetile.png');
-     line-height: 120%;
 }
 
 h2 {
      font-size: 12pt;
-     color: #000011;
+     color: #001;
      letter-spacing: 0.05em;
-     background-color: #ddf;
-     background-image: url('images/tabletile.png');
+     background: #ddf url('images/tabletile.png');
      text-shadow: 0px 0px 2px rgba(0, 0, 64, 0.5);
      padding: 7px 10px;
      wordwrap: none;
@@ -351,29 +323,28 @@ h2 {
 }
 
 h2 a:hover {
-     color: #ff6600;
      text-shadow: 0px 0px 1px rgba(255, 255, 72, 0.9);
-     border-bottom-width: 1px;
+     border-bottom: 1px #ff6600;
      border-bottom-style: solid;
-     border-bottom-color: #000022;
+     border-bottom-color: #002;
      padding-bottom: 5px;
 }
 
 h3 {
      border: 1px solid #002;
      border-left: 5px solid #002;
-     padding: 3px 5px 3px 5px	;
+     padding: 3px 5px 3px 5px;
      margin: 20px 0 15px 0;
      border-radius: 0 4px 4px 0;
      -moz-border-radius: 0 4px 4px 0;
      -webkit-border-radius: 0 4px 4px 0;
-     background-color: #eef;
+     background: #eef;
 }
 
 button {
      border: 1px outset #ddddc0;
      padding: 1px 3px;
-     background-color: #bbf !important;
+     background: #bbf !important;
      text-decoration: none;
      border-radius: 4px;
      -moz-border-radius: 4px;
@@ -387,15 +358,16 @@ button {
 
 button:hover{
      border: 1px solid #f60;
-     background-color: #f60 !important;
+     background: #f60 !important;
      color: #fff;
 }
 
 button:active{
      border: 1px solid #f60;
-     background-color: #001 !important;
+     background: #001 !important;
      color: #f60;
 }
+
 .underline {
      border-bottom: 1px solid #000022;
      padding: 5px 0px 5px 0px;
@@ -413,49 +385,37 @@ button:active{
      valign: middle;
 }
 
-hr {
-     color: #003;
-     background-color: #003;
-     height: 1px;
-     border: 0px solid #003;
-     margin: 10px 0;
-}
-
 input {
-     background-color: #eef;
+     background: #eef;
      color: #003;
      margin: 5px 10px 5px 10px;
-     padding: 4px 2px; 
-     font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana,  Tahoma, Helvetica, sans-serif;
-     font-weight: bold;
+     padding: 4px 2px;
+     font: bold 8pt "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif;
      border: 1px solid #001;
-     padding: 4px;
      text-decoration: none;
      min-width: 110px;
-     font-size: 8pt;
 }
 
 input:hover {
-     background-color: #f60;
+     background: #f60;
      color: #fff;
      border: 1px solid #f60;
 }
 
 input:active {
-     background-color: #002;
+     background: #002;
      color: #f60;
      border: 1px solid #f60;
 }
 
 submit {
-     background-color: #f00;
+     background: #f00;
      color: #eef;
      margin: 10px 2px 10px 0;
-     padding: 2px; 
-     font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana,  Tahoma, Helvetica, sans-serif;
+     padding: 2px;
+     font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif;
      font-weight: bold;
      border: 1px solid #001;
-     padding: 0px 2px 1px 2px;
      text-decoration: none;
 }
 
@@ -464,29 +424,27 @@ input checkbox {
 }
 
 select {
-     background-color: #eef;
+     background: #eef;
      color: #003;
      margin: 5px 10px 5px 10px;
      padding: 4px;
-     font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana,  Tahoma, Helvetica, sans-serif;
      border: 1px solid #001;
      min-width: 110px;
-     font-size: 8pt;
+     font: 8pt "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif;
 }
 
 textarea {
      padding: 5px;
      margin: 0 5px 5px 0px;
-     background-color: #eef;
+     background: #eef;
      color: #003;
      border-radius: 4px;
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
-     font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
-     font-size: 8pt;
+     font: 8pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
      min-height: 100px;
      min-width: 100%;
-     border: 1px solid #001;     
+     border: 1px solid #001;
 }
 
 form {}
